# metaAgent

./: README.md  envIntro.md  intsruction.md  pyproject.toml
Demo/: README.md  cli.py  dialogue.py  doctor_demo.py  main.py  patient_demo.py
agent/: __init__.py  agent_prompts.py  analytics_manager.py  instructions.py  intent_router.py  llm_planner.py  llm_router.py  open_analytics_agent.py  orchestrator.py  plan_validator.py  planner_prompts.py  roster_query.py  schemas.py
config/: __init__.py  settings.py
models/: __init__.py  analytics_models.py  common.py  domain.py  result_set.py  session.py
repositories/: __init__.py  db_client.py  mock_data.py  rehab_repository.py
server/: __init__.py  main.py  request_factory.py  result_set_store.py  session_context.py  session_manager.py
services/: __init__.py  analytics_service.py  deviation_service.py  execution_service.py  gait_service.py  outcome_service.py  plan_service.py  reflection_service.py  report_service.py  result_set_service.py  shared.py  user_lookup_service.py
tests/: test_agent_session_continuity.py  test_entrypoints_and_intent_router.py  test_identity_scoped_user_tools.py  test_open_analytics.py  test_orchestrator_cleanup.py  test_result_set_followup.py  test_roster_query_normalization.py  test_session_identity.py
tools/: __init__.py  analytics_tools.py  base.py  execution_tools.py  gait_tools.py  outcome_tools.py  plan_tools.py  reflection_tools.py  report_tools.py  result_set_tools.py  user_lookup_tools.py
